2013-05-21  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* updatewindow.py: Improved UI for quotation.

2013-05-19  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* twitter/tweetentry.py, view.py, html/gfeedline.js: Added support
	  to insert tweets with in_reply_to_status_id.

2013-05-17  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* plugins/twitter/*: Added support for view conversation with
	  in_reply_to_status_id.

2013-05-14  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* twitter/account.py, menu.py: Added an API for accessing with
	  in_reply_to_status_id.
	* twitter/api.py, twitter/output.py: Improved Twitter API access
	  interval.

2013-05-13  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* twitter/account.py (TwitterConfig): Improved Twitter
	  configuration data object.
	* updatewindow.py (UpdateWindow): Added support to insert quote on
	  reply windows (issue #28).  Improved status letters counting for
	  Twitter.

2013-05-12  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* NEWS: 2.1.1 release.

2013-05-10  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* tumblr/account.py (Tumblr.posts): Added support hostname CNAME
	  for Tumblr posts feeds.
	* tumblr/entry.py: Fixed a bug.
	* tumblr/assistant.py (TumblrAuthAssistant): Fixed a Tumblr
	  authorization error (issue #27).

2013-05-01  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* NEWS: 2.1 release.

2013-04-30  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* twitter/tweetentry.py: Fixed an entry atribute.

2013-04-29  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* de_DE.po: Updated German translation.  Thanks t_bb_!
	* es_ES.po: Updated Spanish translation.  Thanks Adolfo Jayme!
	* twittytwister/streaming.py: Fixed incompatibility with Twisted
	  12.3.0. Thanks Ralph Meijer! Applyed his patch from his git branch.
	* twittytwister/twitter.py (Twitter._urlencode): Fixed a '/' quote
	  problem.
	* menu.py, preferences.py, preferences.glade: Removed a 'View
	  Conversation' menu item. The API is not supported Twitter API 1.1.
